# API-exp

./: .env  Makefile  README.md  pyproject.toml
callback/: admin.py  models.py  serializers.py  views.py
callback/migrations/: 0001_initial.py
config/: settings.py  urls.py  wsgi.py
example_csv/: bills.csv
utils/: db.py  misc.py
utils/tests/: test_misc.py
utils/tests/fixtures/: bills.csv
